# pi-drive-final

./: .gitattributes  .gitignore  infer_caddy_pi05.py  infer_nvidia_clip_pi05.py  prepare_caddy_lerobot.py  pyproject.toml  train_modal_pi05_lora_nvidia_driving.py  upload_grpo_hf.py
dpo/: __init__.py  alpamayo_preference.py  constants.py  context_builders.py  dpo_train_cosmos.py  dpo_train_real.py  modal_cosmos_judge.py  modal_posttrain.py  objective.py  openpi_dpo_eval.py  openpi_dpo_runner.py  openpi_dpo_train.py  smoke_test.py  trainable_dpo.py  trainer.py
evals/: eval_compare.py  run_alpamayo.py
grpo/: __init__.py  advantages.py  constants.py  context_builders.py  dataset_paths.py  eval_indices.py  eval_metrics.py  flow_grpo.py  label_cache.py  modal_ar1_labels.py  modal_posttrain.py  modal_smoke.py  objective.py  openpi_eval.py  openpi_grpo_runner.py  openpi_grpo_train.py  parquet_frames.py  sample_group.py  smoke_test.py  trainable_state.py  trainer.py
openpi_patches/: __init__.py  driving_policy.py  patch_openpi.py
pi05/: modal_compute_stats.py  modal_eval_bev.py  modal_extract_data.py  modal_train_bc.py
pi05/inference/: infer.py  norm_stats.json
pi05/rlt/: README.md  __init__.py  buffer.py  config.py  export.py  interfaces.py  learner.py  losses.py  nets.py  safety.py  transition.py  validate.py
rewards/: __init__.py  action_space.py  alpamayo_ranker.py  coc_consistency.py  comfort.py  composite_reward.py  flat_actions.py  meta_actions.py  pdms_terms.py  reward_context.py  trajectory_metrics.py
scripts/: camera_view.py  ps5_steer.py
(+21 files in other folders)
